--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,39 @@
 body {
   /* المطلوب الأول هنا */
   text-align: center;
-  background-size: cover;
+  background-size: cover; 
+  background-image: url(./img/KuwaitCodesWallpaper.png); font-family:Cairo ;
 }
 
 /* المطلوب الثاني هنا */
-nav {
+nav {  display: flex;justify-content:center; background-color: rosybrown ; opacity:80%;
+  
+
 }
-.nav-elements {
+.nav-elements {  display: flex; justify-content: space-between; width: 300px;
 }
 
 .card {
   /* المطلوب الثالث هنا */
   width: 400px;
   height: 500px;
-  background-color: white;
+  background-color:white; box-shadow:12px 12px rgb(152, 212, 252);
+  border-radius: 300px;
 }
 
 img {
   /* المطلوب الرابع هنا */
   width: 120px;
   height: 120px;
-  margin-top: 20px;
+  margin-top: 20px; box-shadow: rosybrown 10px 10px; border-radius: 50%;
 }
 
-.hobbies {
+.hobbies {  display: grid;
+  grid-row-gap: 10px;
+  grid-template-columns: auto auto auto; ; justify-content: space-between; ;
   /* المطلوب السادس هنا */
 }
+.hobbies:hover { transform:skew(10deg);}
 
 .center {
   margin: auto;
